# solana-dex

./: LICENSE  README.md
amm/: Anchor.toml
amm/programs/amm/: Cargo.toml
amm/programs/amm/src/: lib.rs  state.rs
amm/programs/amm/src/instructions/: add_liquidity.rs  common.rs  init_pool.rs  mod.rs  remove_liquidity.rs  swap.rs
amm/tests/: Cargo.toml
amm/tests/src/: lib.rs  test_add_liquidity.rs  test_helper.rs  test_init_pool.rs  test_remove_liquidity.rs  test_swap.rs  token_helper.rs
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/liquidity/: add-dialog.tsx  input-select.tsx  page.tsx  remove-dialog.tsx
frontend/src/app/swap/: page.tsx
frontend/src/components/: header.tsx
frontend/src/components/solana/: solana-provider.tsx
frontend/src/idl/: amm.json
frontend/src/lib/: amm-client.ts  constants.ts
frontend/src/types/: token.ts
